[gd_scene load_steps=35 format=3 uid="uid://lry4ck3mn8oe"]

[ext_resource type="PackedScene" uid="uid://dij7r1m3g0jo1" path="res://scenes/Field.tscn" id="1_1mvll"]
[ext_resource type="Script" path="res://mainCam.gd" id="1_3ulpc"]
[ext_resource type="PackedScene" uid="uid://bm66n6bsum1cc" path="res://scenes/handScene.tscn" id="1_nwjo1"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera_host/phantom_camera_host.gd" id="2_82stg"]
[ext_resource type="Script" path="res://debug_ui/DebugButtons.gd" id="3_7d7uj"]
[ext_resource type="Texture2D" uid="uid://dgj1n8cljmxmd" path="res://assets/textures/tiles/Tiles085_4K-JPG_Color.jpg" id="5_a7qbt"]
[ext_resource type="PackedScene" uid="uid://con1wfa3wg5dy" path="res://pause_menu.tscn" id="5_iutai"]
[ext_resource type="PackedScene" uid="uid://fen8wqb4wug6" path="res://scenes/aberrationScore.tscn" id="6_b0dl5"]
[ext_resource type="Texture2D" uid="uid://72vkm364cp52" path="res://assets/textures/tiles/Tiles085_4K-JPG_AmbientOcclusion.jpg" id="6_b45ql"]
[ext_resource type="Texture2D" uid="uid://df45re4yxm333" path="res://assets/textures/tiles/Tiles085_4K-JPG_NormalGL.jpg" id="7_alfoh"]
[ext_resource type="Script" path="res://TrapDoor.gd" id="8_1i166"]
[ext_resource type="Texture2D" uid="uid://ce2jssi8ju3mq" path="res://assets/textures/tiles/Tiles085_4K-JPG_Roughness.jpg" id="8_gs0nf"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_3D.gd" id="8_o783u"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/resources/tween_resource.gd" id="10_6wea4"]
[ext_resource type="Script" path="res://GameOverScreen.gd" id="11_i4rt7"]
[ext_resource type="Texture2D" uid="uid://cjy88146d6df0" path="res://textures/blood-splatter-png-44464.png" id="12_1f4m0"]
[ext_resource type="Texture2D" uid="uid://cqyrwar0ue25h" path="res://textures/blood-splatter-png-44466.png" id="13_h8n8n"]
[ext_resource type="Script" path="res://IntroScreen.gd" id="13_use0h"]
[ext_resource type="PackedScene" uid="uid://bg7n4mq5dp5q8" path="res://assets/trapdoor_imp.tscn" id="15_mp4ee"]
[ext_resource type="FontFile" uid="uid://c2kauj0kjw4yi" path="res://fonts/EBGaramond-SemiBold.ttf" id="18_mcc21"]
[ext_resource type="FontFile" uid="uid://c5bs0k2smrqo1" path="res://fonts/UnifrakturCook-Bold.ttf" id="19_6s2eo"]
[ext_resource type="PackedScene" uid="uid://1nhb6kmt7ndh" path="res://assets/room.glb" id="20_alnww"]
[ext_resource type="Script" path="res://TextOnScreen.gd" id="23_kvx3b"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_2n2dj"]
sky_top_color = Color(0.596078, 0.756863, 1, 1)
ground_bottom_color = Color(0.901961, 0.866667, 0.835294, 1)

[sub_resource type="Sky" id="Sky_i41m7"]
sky_material = SubResource("ProceduralSkyMaterial_2n2dj")

[sub_resource type="Environment" id="Environment_x1u6c"]
background_mode = 1
background_energy_multiplier = 0.0
sky = SubResource("Sky_i41m7")
ambient_light_energy = 0.0
reflected_light_source = 1
ssil_enabled = true
glow_enabled = true
glow_bloom = 0.17
volumetric_fog_enabled = true
volumetric_fog_albedo = Color(0.180392, 0.180392, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2ivm7"]
albedo_texture = ExtResource("5_a7qbt")
roughness_texture = ExtResource("8_gs0nf")
normal_enabled = true
normal_texture = ExtResource("7_alfoh")
ao_enabled = true
ao_light_affect = 1.0
ao_texture = ExtResource("6_b45ql")
uv1_scale = Vector3(6.25, 6.25, 6.25)
texture_filter = 0

[sub_resource type="QuadMesh" id="QuadMesh_6n83a"]
lightmap_size_hint = Vector2i(52, 52)
material = SubResource("StandardMaterial3D_2ivm7")
size = Vector2(50, 50)

[sub_resource type="ViewportTexture" id="ViewportTexture_saqbe"]
viewport_path = NodePath("SubViewport")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_r6gb6"]
resource_local_to_scene = true
transparency = 1
albedo_texture = SubResource("ViewportTexture_saqbe")
emission_enabled = true
emission = Color(0.776471, 0, 0, 1)

[sub_resource type="QuadMesh" id="QuadMesh_jxwoe"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_r6gb6")

[sub_resource type="Resource" id="Resource_tcfvw"]
script = ExtResource("10_6wea4")
duration = 1.0
transition = 0
ease = 2

[sub_resource type="Theme" id="Theme_uy0ww"]
default_font = ExtResource("19_6s2eo")
default_font_size = 250

[sub_resource type="FontVariation" id="FontVariation_t7rlk"]
base_font = ExtResource("19_6s2eo")
spacing_glyph = 5

[node name="World" type="Node3D"]

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.986572, 0.163326, 0, -0.163326, 0.986573, 0, 1.2, -0.821945)
cull_mask = 1048573
current = true
script = ExtResource("1_3ulpc")

[node name="PhantomCameraHost" type="Node" parent="Camera3D"]
script = ExtResource("2_82stg")

[node name="SubViewportContainer" type="SubViewportContainer" parent="Camera3D"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="Camera3D/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
msaa_3d = 2
canvas_cull_mask = 4294966274
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="Hand" parent="Camera3D/SubViewportContainer/SubViewport" instance=ExtResource("1_nwjo1")]

[node name="FixedCardRef" type="Node3D" parent="Camera3D/SubViewportContainer/SubViewport"]

[node name="Field" parent="." instance=ExtResource("1_1mvll")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_x1u6c")

[node name="Floor" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 1.49, -0.5, -15.5)
layers = 61
mesh = SubResource("QuadMesh_6n83a")

[node name="AberrationScore" parent="." instance=ExtResource("6_b0dl5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.794609, -2.88724)
mesh = SubResource("QuadMesh_jxwoe")
skeleton = NodePath("../CanvasLayer")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_7d7uj")

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_right = 269.0
offset_bottom = 342.0

[node name="Deal Hand" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Deal Hand (5 Cards)"

[node name="Deal Aberration" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Deal Aberration Choice"

[node name="Add Card" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Add Card To Hand"

[node name="Button2" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Test Game Over Screen"

[node name="GameMode" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
text = "test"
horizontal_alignment = 1

[node name="PlayerScore" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="CurrentTarget" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="TrapDoor" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.888596)
script = ExtResource("8_1i166")

[node name="TrapDoorViewCam" type="Node3D" parent="TrapDoor"]
transform = Transform3D(1, 0, 0, 0, 0.986572, 0.163326, 0, -0.163326, 0.986573, 0, 1.2, 0.066651)
script = ExtResource("8_o783u")
priority_override = false
priority = 20
follow_mode = 0
look_at_mode = 0
tween_parameters = SubResource("Resource_tcfvw")
tween_on_load = false
inactive_update_mode = 0
camera_3D_resource = null

[node name="trapdoor" parent="TrapDoor" instance=ExtResource("15_mp4ee")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.431, -2.932)

[node name="GameOverScreen" type="CanvasLayer" parent="."]
visible = false
script = ExtResource("11_i4rt7")

[node name="Control" type="Control" parent="GameOverScreen"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BgColor" type="ColorRect" parent="GameOverScreen"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.333333, 0.0627451, 0, 1)

[node name="Splatters" type="ColorRect" parent="GameOverScreen"]
modulate = Color(0, 0, 0, 1)
self_modulate = Color(0, 0, 0, 1)
clip_children = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Blood-splatter-png-44464" type="Sprite2D" parent="GameOverScreen/Splatters"]
position = Vector2(208, 219)
rotation = 1.51924
scale = Vector2(0.628002, 0.589938)
texture = ExtResource("12_1f4m0")

[node name="Blood-splatter-png-44466" type="Sprite2D" parent="GameOverScreen/Splatters"]
position = Vector2(983, 429)
rotation = -0.0565604
scale = Vector2(-1, 1)
texture = ExtResource("13_h8n8n")

[node name="GameOver" type="Label" parent="GameOverScreen"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 0)
theme_override_fonts/font = ExtResource("18_mcc21")
theme_override_font_sizes/font_size = 150
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PressSpace" type="Label" parent="GameOverScreen"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -87.5
offset_top = 90.0
offset_right = 87.5
offset_bottom = 113.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 0)
text = "Press Space To Restart"

[node name="IntroScreen" type="CanvasLayer" parent="."]
visible = false
script = ExtResource("13_use0h")

[node name="Control" type="Control" parent="IntroScreen"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Title" type="Label" parent="IntroScreen"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_uy0ww")
theme_override_colors/font_color = Color(0, 0, 0, 0)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
theme_override_constants/outline_size = 10
theme_override_constants/shadow_outline_size = 1
theme_override_fonts/font = SubResource("FontVariation_t7rlk")
text = "Oubliette"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PressSpace" type="Label" parent="IntroScreen"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -86.0
offset_top = 114.0
offset_right = 89.0
offset_bottom = 137.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 0)
text = "Press Space To Start"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource("5_iutai")]

[node name="SpotLight3D" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -0.274348, 4.07986, -0.216064)
light_color = Color(1, 0.839216, 0.494118, 1)
light_energy = 5.345
light_size = 0.754
light_cull_mask = 4294967261
distance_fade_begin = 598.55
spot_range = 11.4641
spot_angle = 59.4552

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.343299, 0.939226, 0, -0.939226, 0.343299, 0, 5.78899, 0)
visible = false
light_energy = 0.1
light_cull_mask = 4294966274

[node name="room" parent="." instance=ExtResource("20_alnww")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.65766, 15.8642)

[node name="TextOnScreen" type="CanvasLayer" parent="."]
visible = false
script = ExtResource("23_kvx3b")

[node name="Control" type="Control" parent="TextOnScreen"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="TextOnScreen/Control"]
layout_mode = 0
offset_left = 793.0
offset_top = 129.0
offset_right = 1125.0
offset_bottom = 169.0
theme_override_fonts/font = ExtResource("18_mcc21")
theme_override_font_sizes/font_size = 30
text = "Press E to Return To Hand"
horizontal_alignment = 2

[connection signal="pressed" from="Control/VBoxContainer/Deal Hand" to="Control" method="_on_deal_hand_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Deal Aberration" to="Control" method="_on_deal_aberration_pressed"]
[connection signal="button_down" from="Control/VBoxContainer/Add Card" to="Control" method="_on_add_card_button_down"]
[connection signal="button_down" from="Control/VBoxContainer/Button2" to="Control" method="_on_button_2_button_down"]
[connection signal="tween_completed" from="TrapDoor/TrapDoorViewCam" to="TrapDoor" method="_on_trap_door_view_cam_tween_completed"]
[connection signal="tween_started" from="TrapDoor/TrapDoorViewCam" to="TrapDoor" method="_on_trap_door_view_cam_tween_started"]
